--- a/ssm/src/main/webapp/WEB-INF/web.xml
+++ b/ssm/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
   
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:spring-mybatis.xml</param-value>
+    <param-value>classpath:spring-all.xml</param-value>
   </context-param>
   
   <listener>
@@ -35,7 +35,7 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>classpath:springmvc.xml</param-value>
+      <param-value></param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
